--- a/gradle.properties
+++ b/gradle.properties
@@ -8,14 +8,18 @@ forge_version=47.2.0
 forge_version_range=[47.2,)
 kff_version=4.11.0
 
+lodestone_version=1.6.2.216
+mixin_version=0.8.5
+mixin_gradle_version=0.7-SNAPSHOT
+
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
 
-mod_id=examplemod
-mod_name=Example Mod
+mod_id=eden
+mod_name=Eden Space Mod
 mod_version=1.0.0
-mod_authors=John Doe, Someone Else
+mod_authors=Calvin L, William E
 mod_description=I did not change the mod description!\nI don't know what this mod does!
 mod_license=All rights reserved
 # Used in maven publishing, should match mod sources: https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
+mod_group_id=example.eden
